k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ishu
  labels:
    app.kubernetes.io/name: ishu
    app.kubernetes.io/component: namespace
