k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ishu
  namespace: ishu
  labels:
    app.kubernetes.io/name: ishu
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ishu
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 3001
      targetPort: http
